# PoseCNN

./: .gitignore  data_syn_LOV  symlink.sh
data/LOV/: data  extents.txt  keyframe.txt  models  models.txt  poses  poses.txt
data/SUN2012/data/: Images
data/cache/: backgrounds.pkl  backgrounds_depth.pkl
experiments/cfgs/: lov_color_2d.yml
experiments/scripts/: test_synthesis_4Y2.sh  test_synthesis_4Y2_json.sh  test_synthesis_4Y2_multiInstance_json.sh
lib/: make.sh  setup.py
lib/average_distance_loss/: average_distance_loss_op.cc
lib/datasets/: factory.py  lov.py
lib/fcn/: config.py  test.py  train.py
lib/gt_synthesize_layer/: layer.py  minibatch.py
lib/hough_voting_gpu_layer/: hough_voting_gpu_op.cc  hough_voting_gpu_op.cu.cc
lib/kinect_fusion/: CMakeLists.txt  kfusion.cpp
lib/kinect_fusion/include/df/transform/: nonrigid.h
lib/kinect_fusion/include/df/util/: tensor.h
lib/kinect_fusion/src/transform/: nonrigid.cu
lib/networks/: network.py  vgg16_convs.py
lib/nms/: gpu_nms.cpp
lib/normals/: gpu_normals.cpp
lib/synthesize/: CMakeLists.txt  synthesize.cpp  synthesize.hpp
lib/synthesize_4Y2/: syn_cfg.json  synthesize.cpp  synthesize.hpp
tools/: SL_loads_net_for_test.py  im2col.py  imdb.py  test_gradients.py  test_model_creation.py  test_pixel_voting_python.py  test_projectKeypoints.py  test_projectKeypoints_AP.py  test_projectKeypoints_APsyn.py  test_synthesis.py  test_synthesis_4Y2.py  test_synthesis_4Y2_json.py  test_synthesis_4Y2_multiInstance_json.py  tfboard_vis.py  train_net.py  train_starter.py  vgg16convs_vertex_pred.py
